# JeffVideoLib

./: .gitignore  README.md  build.gradle  gradle.properties  parse_crash.py  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jeffmony/m3u8test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jeffmony/m3u8test/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jeffmony/m3u8test/: ExampleUnitTest.java
extra/: .gitignore  compile-ffmpeg.sh  compile-openssl.sh  init-ffmpeg.sh
extra/arm64-v8a/include/libavutil/: ffversion.h
extra/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
extra/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
extra/output/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
extra/output/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
extra/output/openssl/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
extra/output/openssl/armeabi-v7a/lib/pkgconfig/: libssl.pc  openssl.pc
files/: .gitignore
files/m3u8/: a02ee838383b48bb3095dcbf5622beea_local.m3u8  remote.m3u8  test.m3u8  video_0.ts  video_1.ts
gradle/wrapper/: gradle-wrapper.properties
m3u8library/: build.gradle
m3u8library/src/androidTest/java/com/jeffmony/m3u8library/: ExampleInstrumentedTest.java
m3u8library/src/main/cpp/: CMakeLists.txt  android_log.h  video_processor.cpp
m3u8library/src/main/java/com/jeffmony/m3u8library/: VideoProcessManager.java  VideoProcessor.java
m3u8library/src/test/java/com/jeffmony/m3u8library/: ExampleUnitTest.java
